fix: wsTmb labels misalinging tmb background, appGrid.visible when HIDDEN; add: vertical AppGrid page indicators; minor adjustments

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,8 +7,9 @@
 #dash.vertical-overview .dash-item-container .app-well-app,
 #dash.vertical-overview .show-apps {
 	padding-right: 5px;
-	padding-top: 2px;
-	padding-bottom: 2px;
+	/*spacing between icons*/
+	padding-top: 1px;
+	padding-bottom: 1px;
 }
 
 #dash.vertical-overview .dash-separator {
